docs: add comprehensive agent settings and configuration options to .env template

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,30 @@ AZURE_OPENAI_API_VERSION=2024-02-15-preview
 AZURE_OPENAI_CHAT_DEPLOYMENT=gpt-4o  # Your chat model deployment name
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-ada-002  # Your embedding model deployment name
 
+# Agent Settings
+AGENT_TEMPERATURE=1.0  # Temperature for LLM responses (0.0-2.0)
+REQUEST_TIMEOUT=30  # Request timeout in seconds
+MAX_RETRIES=3  # Maximum number of retries for failed requests
+
+# Conversation History Settings
+MAX_CONVERSATION_MESSAGES=20  # Maximum messages to keep in rolling window
+CONVERSATION_HISTORY_FILE=data/conversation_history.json  # Path to history file
+
+# Security Settings
+RATE_LIMIT_ENABLED=true  # Enable rate limiting
+RATE_LIMIT_CALLS=10  # Maximum calls per time period
+RATE_LIMIT_PERIOD=60  # Time period in seconds
+MAX_INPUT_LENGTH=10000  # Maximum input length in characters
+
+# Performance Settings
+ENABLE_RESPONSE_CACHE=true  # Enable response caching
+CACHE_TTL=300  # Cache time-to-live in seconds
+CACHE_MAX_SIZE=100  # Maximum cache size
+
+# Monitoring Settings
+ENABLE_METRICS=true  # Enable metrics collection
+METRICS_PORT=9090  # Port for metrics endpoint
+
 # Alternative: OpenAI Direct (if not using Azure OpenAI)
 # OPENAI_API_KEY=your-openai-api-key-here
 
