feat: add StreamLit web interface with document processing and APK-style debugging tools

--- a/.env.template
+++ b/.env.template
@@ -20,7 +20,7 @@ CONVERSATION_HISTORY_FILE=data/conversation_history.json  # Path to history file
 RATE_LIMIT_ENABLED=true  # Enable rate limiting
 RATE_LIMIT_CALLS=10  # Maximum calls per time period
 RATE_LIMIT_PERIOD=60  # Time period in seconds
-MAX_INPUT_LENGTH=10000  # Maximum input length in characters
+MAX_INPUT_LENGTH=500000  # Maximum input length in characters (increased for document processing)
 
 # Performance Settings
 ENABLE_RESPONSE_CACHE=true  # Enable response caching
