feat: add real-time streaming responses with agent progress indicators and emergency cache clearing tools

--- a/.env.template
+++ b/.env.template
@@ -8,7 +8,8 @@ AZURE_OPENAI_CHAT_DEPLOYMENT=gpt-4o  # Your chat model deployment name
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-ada-002  # Your embedding model deployment name
 
 # Agent Settings
-AGENT_TEMPERATURE=1.0  # Temperature for LLM responses (0.0-2.0)
+# AGENT_TEMPERATURE is deprecated - agents now use model default temperature for compatibility
+# Some models (e.g., o1-preview, o1-mini) only support default temperature values
 REQUEST_TIMEOUT=30  # Request timeout in seconds
 MAX_RETRIES=3  # Maximum number of retries for failed requests
 
