--- a/pytest.ini
+++ b/pytest.ini
@@ -18,6 +18,7 @@ markers =
     integration: Integration tests
     slow: Slow running tests
     requires_api: Tests that require API access
+    performance: Performance and benchmarking tests
 
 # Coverage
 [coverage:run]
